<resources>
    <string name="app_name">Salesman Briefcase</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Done</string>
    <string name="number_dot">.</string>
    <string name="btn_backspace">DEL</string>
    <string name="btn_submit_pin">SUBMIT</string>
    <string name="icon_orders">&#xf0c9;</string>
    <string name="icon_money">&#xf0d6;</string>
    <string name="icon_userprofile">&#xf007;</string>
    <string name="icon_assets">&#xf170;</string>
    <string name="scan">Scan</string>
    <string name="icon_quote">&#xf2b5;</string>
    <string name="icon_marker">&#xf041;</string>
    <string name="title_activity_maps">Thee StockTakeAp</string>
    <string name="icon_memo">&#xf02d;</string>
    <string name="image_capture">Image Capture</string>
    <string name="image_ok">Image Captured Ok!</string>
    <string name="image_uploaded">image Captured and uploaded successfully.</string>
    <string name="confirmation_delete">Delete !</string>
    <string name="delete_text">Do you really want to delete this image?</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>

    <string name="button_continue">Continue</string>
    <string name="camera_storage_permission">Camera and Storage Permission required for this app</string>
    <string name="go_settings_permission">Go to settings and enable permissions</string>
    <string name="ok_button">OK</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_library">Choose from Library</string>
    <string name="cancel_photo">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_file">Select File</string>
    <string name="photo_cancel">Cancel</string>
    <string name="permission_denied">Permission denied !</string>
    <string-array name="remind_spinner">
        <item>Everyday</item>
        <item>Date-Picker</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>