<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.salesmanbriefcasepro.reginald.salesmanbriefcase.LoginActivity">


    <TextView
        android:id="@+id/hello_user"
        android:layout_width="405dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/keyboard"
        android:layout_alignLeft="@+id/keyboard"
        android:layout_alignParentTop="false"
        android:layout_marginStart="-11dp"
        android:layout_marginLeft="-11dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textColor="@color/abc_search_url_text_pressed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"

        android:layout_marginTop="43dp"

        android:background="@drawable/edittextradius"
        android:enabled="false"
        android:minHeight="100dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:layout_below="@id/password_field"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginBottom="1dp" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_below="@id/user_list"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1.06"
        android:background="@android:color/white"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <TableRow
            style="@style/keyboard_row"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_one"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"

                android:text="@string/number_two"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_three"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_four"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_five"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_six"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_seven"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_eight"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:layout_height="50dp"
                android:background="#0096cc"
                android:text="@string/number_nine"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:layout_height="50dp"
                android:background="@color/foreground_material_light"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:background="#0096cc"
                android:text="@string/number_zero"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato" />

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:layout_height="50dp"
                android:text="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp"
                app:fontFamily="@font/lato" />
        </TableRow>


    </TableLayout>

    <ImageView
        android:id="@+id/syncicon"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-263dp"
        android:layout_toLeftOf="@+id/keyboard"
        android:background="@color/background_floating_material_light"
        android:src="@drawable/salesmanbriefcases" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/syncicon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/exit_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#0096cc"
        android:padding="5dp"
        android:text="Close The App" />

</RelativeLayout>
